# Android-ModMenu-SemiJni

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/support/: LGLClickListener.java  Logcat.java  MainActivity.java  Menu.java  Views.java
app/src/main/jni/: CMakeLists.txt  Main.cpp  Menu.h
app/src/main/jni/Codes/: Classes.h  Struct.h
app/src/main/jni/ImGui/: Font.h  Iconcpp.h  IconsFontAwesome.h  icon.h  stb_image.c  stb_image.h
app/src/main/jni/Includes/: Macros.h  Utils.h
app/src/main/jni/Jni/: Api.h  JniP.h
app/src/main/jni/KittyMemory/: KittyMemory.cpp  MemoryBackup.cpp  MemoryPatch.cpp
app/src/main/jni/LGL2Cpp/: Il2Cpp.cpp  Il2Cpp.h  Il2CppType.h
